{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 25,
  "lineage": "a748c4a6-07c4-e685-30ae-e66ed7e8a052",
  "resources": [
    {
      "module": "module.route_table__private",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:755233231675:route-table/rtb-007ee88125055d51a",
            "id": "rtb-007ee88125055d51a",
            "owner_id": "755233231675",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cloudbrg-private",
              "Owner": "seank01",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/route-table",
              "module.terraform.io/instance": "cloudbrg-private",
              "module.terraform.io/name": "route-table",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "cloudbrg-private",
              "Owner": "seank01",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/route-table",
              "module.terraform.io/instance": "cloudbrg-private",
              "module.terraform.io/name": "route-table",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-085ac73bf731034f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table__private",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1f0b18c2c329be8",
            "route_table_id": "rtb-007ee88125055d51a",
            "subnet_id": "subnet-0b26a276d97e408f8"
          },
          "dependencies": [
            "module.route_table__private.aws_route_table.this",
            "module.subnet_group__private.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8b315e358bf3833",
            "route_table_id": "rtb-007ee88125055d51a",
            "subnet_id": "subnet-039d61a6b49fea561"
          },
          "dependencies": [
            "module.route_table__private.aws_route_table.this",
            "module.subnet_group__private.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table__public",
      "mode": "managed",
      "type": "aws_route",
      "name": "ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.0.0.0/0",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-030f293e00f0e9ea7",
            "id": "r-rtb-0b553b71aa0a340cf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b553b71aa0a340cf",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.route_table__public.aws_route_table.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table__public",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:755233231675:route-table/rtb-0b553b71aa0a340cf",
            "id": "rtb-0b553b71aa0a340cf",
            "owner_id": "755233231675",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-030f293e00f0e9ea7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudbrg-public",
              "Owner": "seank01",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/route-table",
              "module.terraform.io/instance": "cloudbrg-public",
              "module.terraform.io/name": "route-table",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "cloudbrg-public",
              "Owner": "seank01",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/route-table",
              "module.terraform.io/instance": "cloudbrg-public",
              "module.terraform.io/name": "route-table",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-085ac73bf731034f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table__public",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e1271ce36983eba",
            "route_table_id": "rtb-0b553b71aa0a340cf",
            "subnet_id": "subnet-0d758b8e8edb687d6"
          },
          "dependencies": [
            "module.route_table__public.aws_route_table.this",
            "module.subnet_group__public.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e89ff2d76c2f38ed",
            "route_table_id": "rtb-0b553b71aa0a340cf",
            "subnet_id": "subnet-01812dc6b39cf86c6"
          },
          "dependencies": [
            "module.route_table__public.aws_route_table.this",
            "module.subnet_group__public.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_group__private",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "cloudbrg-private-001/az1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:755233231675:subnet/subnet-0b26a276d97e408f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b26a276d97e408f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "755233231675",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudbrg-private-001/az1",
              "Owner": "seank01",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "cloudbrg-private",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "cloudbrg-private-001/az1",
              "Owner": "seank01",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "cloudbrg-private",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "vpc_id": "vpc-085ac73bf731034f8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "cloudbrg-private-002/az2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:755233231675:subnet/subnet-039d61a6b49fea561",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039d61a6b49fea561",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "755233231675",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudbrg-private-002/az2",
              "Owner": "seank01",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "cloudbrg-private",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "cloudbrg-private-002/az2",
              "Owner": "seank01",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "cloudbrg-private",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "vpc_id": "vpc-085ac73bf731034f8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_group__public",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "cloudbrg-public-001/az1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:755233231675:subnet/subnet-0d758b8e8edb687d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d758b8e8edb687d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "755233231675",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudbrg-public-001/az1",
              "Owner": "seank01",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "cloudbrg-public",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "cloudbrg-public-001/az1",
              "Owner": "seank01",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "cloudbrg-public",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "vpc_id": "vpc-085ac73bf731034f8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "cloudbrg-public-002/az2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:755233231675:subnet/subnet-01812dc6b39cf86c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01812dc6b39cf86c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "755233231675",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudbrg-public-002/az2",
              "Owner": "seank01",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "cloudbrg-public",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "cloudbrg-public-002/az2",
              "Owner": "seank01",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "cloudbrg-public",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "vpc_id": "vpc-085ac73bf731034f8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:755233231675:internet-gateway/igw-030f293e00f0e9ea7",
            "id": "igw-030f293e00f0e9ea7",
            "owner_id": "755233231675",
            "tags": {
              "Name": "cloudbrg",
              "Owner": "seank01",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/vpc",
              "module.terraform.io/instance": "cloudbrg",
              "module.terraform.io/name": "vpc",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "cloudbrg",
              "Owner": "seank01",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/vpc",
              "module.terraform.io/instance": "cloudbrg",
              "module.terraform.io/name": "vpc",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "vpc_id": "vpc-085ac73bf731034f8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:755233231675:vpc/vpc-085ac73bf731034f8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c0b487bbd3a34fba",
            "default_route_table_id": "rtb-036529684a8fb8139",
            "default_security_group_id": "sg-0014058dc42c6a645",
            "dhcp_options_id": "dopt-01dd2f68",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-085ac73bf731034f8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-036529684a8fb8139",
            "owner_id": "755233231675",
            "tags": {
              "Name": "cloudbrg",
              "Owner": "seank01",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/vpc",
              "module.terraform.io/instance": "cloudbrg",
              "module.terraform.io/name": "vpc",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "cloudbrg",
              "Owner": "seank01",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/vpc",
              "module.terraform.io/instance": "cloudbrg",
              "module.terraform.io/name": "vpc",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            }
          }
        }
      ]
    }
  ]
}